--- a/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
+++ b/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
@@ -3,6 +3,7 @@
     [shIcon]="'calendar'"
     [shName]="shName"
     [shId]="shId"
+    [shSize]="shSize"
     [shPlaceholder]="shPlaceholder"
     [(ngModel)]="displayValue"
     [shReadonly]="true"
