--- a/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
+++ b/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
@@ -10,4 +10,8 @@
     [shAutocomplete]="'off'"
     [shDataVali]="shDataVali">
   </sh-input>
+
+  <sh-button
+    (shClick)="resetDisplayValue()">
+  </sh-button>
 </div>
