--- a/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
+++ b/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
@@ -12,6 +12,7 @@
   </sh-input>
 
   <sh-button
-    (shClick)="resetDisplayValue()">
+    (shClick)="resetDisplayValue()"
+    [shClass]="'blank'">
   </sh-button>
 </div>
