--- a/projects/sahu/styles/_variables-global.scss
+++ b/projects/sahu/styles/_variables-global.scss
@@ -1,10 +1,19 @@
+$default_color: #a7b2b9;
+$default_color_active: #909598;
+
 $primary_color: #428BCA;
 $primary_color_active: #1B6AAA;
 
 $info_color: #6FB3E0;
-$info_color_active: #4F99C6;
+$info_color_active: #4088b5;
 
 $success_color: #87B87F;
 $success_color_active: #629B58;
+
+$warning_color: #f7ae47;
+$warning_color_active: #cb8420;
+
+$danger_color: #D15B47;
+$danger_color_active: #b73e28;
 
 $primary_color_text: #333;
