--- a/projects/sahu/styles/_button.scss
+++ b/projects/sahu/styles/_button.scss
@@ -17,17 +17,6 @@
   color: $primary_color;
 }
 
-.btn-default {
-  background-color: $default_color;
-  border-color: $default_color;
-  color: #fff;
-}
-
-.btn-default:hover {
-  background-color: $default_color_active;
-  border-color: $default_color_active;
-}
-
 .btn-primary {
   background-color: $primary_color;
   border-color: $primary_color;
@@ -81,18 +70,6 @@
 .btn-danger:hover {
   background-color: $danger_color_active;
   border-color: $danger_color_active;
-}
-
-.btn-outline-default {
-  background-color: #fff;
-  border-color: $default_color_active;
-  color: $default_color_active;
-}
-
-.btn-outline-default:hover {
-  background-color: $default_color;
-  border-color: $default_color;
-  color: #fff;
 }
 
 .btn-outline-primary {
@@ -168,4 +145,15 @@
 .btn-lg {
   font-size: 15px;
   height: 40px;
+}
+
+.btn-xl {
+  font-size: 15px;
+  height: 48px;
+}
+
+.btn:disabled {
+  background-color: $disabled_color;
+  color: #e0e0e0;
+  cursor: not-allowed;
 }
