--- a/projects/sahu/styles/_variables-global.scss
+++ b/projects/sahu/styles/_variables-global.scss
@@ -1,6 +1,3 @@
-$default_color: #a7b2b9;
-$default_color_active: #909598;
-
 $primary_color: #428BCA;
 $primary_color_active: #1B6AAA;
 
@@ -17,3 +14,4 @@ $danger_color: #D15B47;
 $danger_color_active: #b73e28;
 
 $primary_color_text: #333;
+$disabled_color: #a1a6a9;
