--- a/projects/sahu/styles/_button.scss
+++ b/projects/sahu/styles/_button.scss
@@ -14,7 +14,10 @@
 }
 
 .btn-blank {
+  background-color: transparent;
+  border: none;
   color: $primary_color;
+  padding: 0;
 }
 
 .btn-primary {
