--- a/projects/sahu/src/lib/sh-page-header/sh-page-header.component.html
+++ b/projects/sahu/src/lib/sh-page-header/sh-page-header.component.html
@@ -1,5 +1,5 @@
 <div class="sh-page-header">
-  <sh-button [shIcon]="'arrow-left'" [shClass]="'blank'" *ngIf="shBack" (click)="shBackLink()"></sh-button>
+  <sh-button [shIcon]="'arrow-left'" [shVariant]="'blank'" *ngIf="shBack" (click)="shBackLink()"></sh-button>
   <h1>{{shTitle}}</h1>
   <p class="gray font13 font-italic m-0">{{shSupTitle}}</p>
 </div>
