--- a/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
+++ b/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
@@ -5,7 +5,7 @@
       [shName]="shName"
       [shId]="shId"
       [shSize]="shSize"
-      [shPlaceholder]="shPlaceholder"
+      [shPlaceHolder]="shPlaceHolder"
       [(ngModel)]="displayValue"
       [shReadonly]="true"
       [shAutocomplete]="'off'"
