--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -9,13 +9,14 @@
       [attr.value]="shValue ?? null"
       [attr.readonly]="shReadonly ? true : null"
       [disabled]="shDisabled"
-      [attr.placeholder]="shPlaceholder ?? null"
+      [attr.placeholder]="shPlaceHolder ?? null"
       [attr.autocomplete]="shAutocomplete ?? null"
       [attr.data-vali]="shDataVali ?? null"
       (focus)="handleFocus()"
       (input)="handleInput($event)"
       (blur)="handleBlur()">
-    <span class="icon" *ngIf="iconRight && !shLoading" [innerHTML]="iconRight"></span>
+    <span class="icon" *ngIf="iconRight && !shLoading && !shAllowClear" [innerHTML]="iconRight"></span>
+    <button *ngIf="!shLoading && shAllowClear" type="button" class="sh-reset" (click)="reset()"></button>
     <span class="input-loading" *ngIf="shLoading"></span>
   </div>
 </div>
