--- a/projects/sahu/styles/_input.scss
+++ b/projects/sahu/styles/_input.scss
@@ -72,15 +72,23 @@ input:focus-visible {
 }
 
 .input-sm {
-  height: 24px;
+  height: 28px;
+
+  input {
+    font-size: 13px;
+  }
 }
 
 .input-md {
   height: 32px;
+
+  input {
+    font-size: 14px;
+  }
 }
 
 .input-lg {
-  height: 40px;
+  height: 36px;
 
   input {
     font-size: 15px;
@@ -93,7 +101,7 @@ input:focus-visible {
 }
 
 .input-xl {
-  height: 48px;
+  height: 40px;
 
   input {
     font-size: 16px;
