--- a/projects/sahu/styles/_input.scss
+++ b/projects/sahu/styles/_input.scss
@@ -158,6 +158,8 @@ input:focus-visible {
 }
 
 .sh-switch {
+  margin: 0;
+
   .remark {
     background-color: #e0e0e0;
     border: 1px solid #ccc;
