--- a/projects/sahu/styles/_variables-global.scss
+++ b/projects/sahu/styles/_variables-global.scss
@@ -1,8 +1,8 @@
-$primary_color: #428BCA;
-$primary_color_active: #1B6AAA;
+$primary_color: #0586ff;
+$primary_color_active: #0071dc;
 
-$info_color: #6FB3E0;
-$info_color_active: #4088b5;
+$info_color: #56b3f1;
+$info_color_active: #2d98df;
 
 $success_color: #87B87F;
 $success_color_active: #629B58;
