--- a/projects/sahu/styles/_select.scss
+++ b/projects/sahu/styles/_select.scss
@@ -163,7 +163,7 @@
 .sh-select-content {
   background: white;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 2px;
   box-shadow: 0 11px 15px -7px rgba(0, 0, 0, .2), 0 24px 38px 3px rgba(0, 0, 0, .14), 0 9px 46px 8px rgba(0, 0, 0, .12);
   max-height: 220px;
   overflow-x: hidden;
@@ -173,34 +173,19 @@
   width: 100%;
   z-index: 1000;
 
-  &::-webkit-scrollbar {
-    background-color: #dfdfdf;
-    border-radius: 99px;
-    width: 6px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: #c6c6c6;
-    border-radius: 99px;
-    transition: .3s;
-  }
-
-  &::-webkit-scrollbar-thumb:hover {
-    background-color: #afafaf;
-  }
-
   .sh-select-option {
     cursor: pointer;
-    margin: 4px 0;
+    margin: 3px 0;
     position: relative;
 
     label {
       align-items: center;
       border-radius: 3px;
       display: flex;
-      gap: 16px;
+      gap: 14px;
       justify-content: space-between;
-      padding: 4px 8px 4px 10px;
+      margin: 0;
+      padding: 4px 5px 4px 6px;
       transition: .3s;
     }
 
@@ -224,9 +209,9 @@
 
     .remark {
       background-color: transparent;
-      flex: 16px 0 0;
-      height: 16px;
-      width: 16px;
+      flex: 14px 0 0;
+      height: 14px;
+      width: 14px;
     }
   }
 
