--- a/projects/sahu/src/lib/sh-pagination/sh-pagination.component.html
+++ b/projects/sahu/src/lib/sh-pagination/sh-pagination.component.html
@@ -26,6 +26,7 @@
 
   <ng-content *ngIf="shShowSizeChanger">
     <sh-select
+      [shSize]="'sm'"
       [shAllowClear]="false"
       [(ngModel)]="shPageSize"
       [shData]="pageSizeList"
