--- a/projects/sahu/styles/_date_picker.scss
+++ b/projects/sahu/styles/_date_picker.scss
@@ -110,17 +110,22 @@
 }
 
 .start_date.selected .day,
-.end_date.selected .day {
+.end_date.selected .day,
+.single_date.selected .day {
   background: #238dff;
   color: #fff;
 }
 
+.single_date.selected .day {
+  border-radius: 3px;
+}
+
 .start_date.selected .day {
-  border-radius: 4px 0 0 4px;
+  border-radius: 3px 0 0 3px;
 }
 
 .end_date.selected .day {
-  border-radius: 0 4px 4px 0;
+  border-radius: 0 3px 3px 0;
 }
 
 .other-month .day {
