--- a/projects/sahu/src/lib/sh-input/sh-input.component.html
+++ b/projects/sahu/src/lib/sh-input/sh-input.component.html
@@ -14,7 +14,9 @@
       [attr.data-vali]="shDataVali ?? null"
       (focus)="handleFocus()"
       (input)="handleInput($event)"
-      (blur)="handleBlur()">
+      (click)="handleClick($event)"
+      (blur)="handleBlur()"
+      #mainInput>
     <span class="icon" *ngIf="iconRight && !shLoading && !value" [innerHTML]="iconRight"></span>
     <sh-button
       *ngIf="!shLoading && shAllowClear && value"
