thêm icon cho date-picker

--- a/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
+++ b/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
@@ -3,7 +3,7 @@
     <sh-input
       (shClick)="openDatePicker()"
       [shAllowClear]="true"
-      [shIcon]="'calendar'"
+      [shIcon]="shIcon"
       [shName]="shName"
       [shId]="shId"
       [shSize]="shSize"
