--- a/projects/sahu/styles/global.scss
+++ b/projects/sahu/styles/global.scss
@@ -12,6 +12,7 @@
 @use './date_picker';
 @use './message_box';
 @use './page_header';
+@use './tabs';
 
 .sh-overlay {
   background-color: transparent;
