--- a/projects/sahu/styles/_tabs.scss
+++ b/projects/sahu/styles/_tabs.scss
@@ -6,23 +6,29 @@
   border: solid #ddd;
   display: flex;
   gap: 8px 16px;
+  position: relative;
 }
 
 .tab-header {
-  border: solid transparent;
   cursor: pointer;
   padding: 12px 20px;
   transition: 0.3s;
 }
 
 .tab-header.active {
-  border-color: #2196F3;
   color: #2196F3;
 }
 
 .tab-header.disabled {
   color: #9e9e9e;
   cursor: not-allowed;
+}
+
+.tab-indicator {
+  background-color: #2196F3;
+  height: 2px;
+  position: absolute;
+  transition: 0.3s;
 }
 
 .tab-top {
@@ -32,8 +38,8 @@
     border-width: 0 0 1px 0;
   }
 
-  .tab-header {
-    border-width: 0 0 2px 0;
+  .tab-indicator {
+    bottom: 0;
   }
 }
 
@@ -44,8 +50,8 @@
     border-width: 1px 0 0 0;
   }
 
-  .tab-header {
-    border-width: 2px 0 0 0;
+  .tab-indicator {
+    top: 0;
   }
 }
 
@@ -57,8 +63,8 @@
     flex-direction: column;
   }
 
-  .tab-header {
-    border-width: 0 2px 0 0;
+  .tab-indicator {
+    right: 0;
   }
 }
 
@@ -70,7 +76,7 @@
     flex-direction: column;
   }
 
-  .tab-header {
-    border-width: 0 0 0 2px;
+  .tab-indicator {
+    left: 0;
   }
 }
