--- a/projects/sahu/styles/_tabs.scss
+++ b/projects/sahu/styles/_tabs.scss
@@ -14,6 +14,14 @@
   }
 }
 
+.tab-card .tab-header-container {
+  gap: 2px;
+
+  .tab-header span {
+    padding: 4px 8px;
+  }
+}
+
 .tab-header {
   background-color: #fff;
   cursor: pointer;
@@ -41,6 +49,12 @@
 .tab-header.disabled {
   color: #9e9e9e;
   cursor: not-allowed;
+}
+
+.tab-content {
+  background: #fff;
+  flex: 1 0 0;
+  padding: 10px 18px;
 }
 
 .tab-indicator {
@@ -95,11 +109,15 @@
 .tab-left {
   flex-direction: row;
 
-  .tab-header-container::before {
-    height: 100%;
-    right: 0;
-    top: 0;
-    width: 1px;
+  .tab-header-container {
+    flex-direction: column;
+
+    &::before {
+      height: 100%;
+      right: 0;
+      top: 0;
+      width: 1px;
+    }
   }
 
   &.tab-card .tab-header {
@@ -115,11 +133,15 @@
 .tab-right {
   flex-direction: row-reverse;
 
-  .tab-header-container::before {
-    height: 100%;
-    left: 0;
-    top: 0;
-    width: 1px;
+  .tab-header-container {
+    flex-direction: column;
+
+    &::before {
+      height: 100%;
+      left: 0;
+      top: 0;
+      width: 1px;
+    }
   }
 
   &.tab-card .tab-header {
